--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -45,7 +45,7 @@
 }
 
 #login-form input[type="submit"] {
-  background-color: var(--yellow);
+  background-color: peachpuff;
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
