--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -1,11 +1,12 @@
 .badge {
   background-color: tomato;
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
+  width: 25px;
+  height: 25px;
+  border-radius: 12.5px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  font-size: 13px;
   font-weight: 600;
 }
